--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ python-slugify==3.0.2
 django-rest-swagger==2.2.0
 GitPython==2.1.13
 celery==4.3.0
-toil
-cwltool
-schema_salad
-psycopg2-binary
+toil==3.21.0
+cwltool==2.0.20200126090152
+schema_salad==4.5.20191229160203
+psycopg2-binary==2.8.4 
