add help to container Makefile

--- a/container/Makefile
+++ b/container/Makefile
@@ -1,4 +1,24 @@
 SHELL:=/bin/bash
+define help
+This is the Makefile for building the Singularity container
+
+On Mac
+-------
+Use Docker to build the Singularity container:
+
+make singularity-build-docker
+
+
+On Juno HPC
+-----------
+make singularity-build
+
+endef
+export help
+help:
+	@printf "$$help"
+
+.PHONY : help
 
 # build the singularity container using Docker
 export DOCKERTAG:=singularityware/singularity:v3.3.0
@@ -12,6 +32,7 @@ singularity-build-docker:
 	-v "$(SINGULARITYDIR):/image" "$(DOCKERTAG)" \
 	build /image/ridgeback_service.sif /image/ridgeback_service.def
 
-# on HPC: module load singularity/3.3.0 &&
+# on Juno HPC
 singularity-build:
+	module load singularity/3.3.0 && \
 	sudo -E singularity build ridgeback_service.sif ridgeback_service.def
