--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ markdown==3.1.1
 django-filter==2.1.0
 django-cors-headers==3.0.2
 python-slugify==3.0.2
-django-rest-swagger==2.2.0
+drf-yasg==1.17.1
 GitPython==3.0.8
 celery==4.3.0
 cwltool==2.0.20200122124526
