--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework==3.9.4
 markdown==3.1.1
 django-filter==2.1.0
 django-cors-headers==3.0.2
+django-test-migrations==1.0.0
 python-slugify==3.0.2
 drf-yasg==1.17.1
 GitPython==3.0.8
