--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ drf-yasg==1.17.1
 GitPython==3.0.8
 celery==4.3.0
 cwltool==2.0.20200122124526
+ruamel.yaml<=0.16.5
 schema-salad==5.0.20200122085940
 psycopg2-binary==2.8.4
 mock==4.0.2
