--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
 install:
   - psql -p 5433 -c 'create database travis_ci_test;' -U postgres
   - pip install -r requirements.txt
-  - pip install toil==3.21.0
+  - pip install "git+https://github.com/mskcc/toil.git@5.4.x#egg=toil[cwl]"
   - source travis_env.sh
   - python manage.py migrate
 script:
