--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ ruamel.yaml<=0.16.5
 psycopg2-binary==2.8.6
 mock==4.0.2
 dj-static==0.0.6
-django-pymemcache==1.0.0s
+django-pymemcache==1.0.0
 coverage==5.5
 flake8==3.9.0
 black==21.6b0
