--- a/requirements-toil.txt
+++ b/requirements-toil.txt
@@ -4,3 +4,5 @@ pytest-cov==2.6.1
 pytest-timeout==1.3.3
 git+https://github.com/mskcc/toil.git@5.4.2#egg=toil[cwl]
 cwltest
+schema-salad==4.5.20191229160203
+cwltool==1.0.20190906054215
