--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
   - sudo apt-get install -y postgresql-11 postgresql-client-11
   - sudo cp /etc/postgresql/{9.6,11}/main/pg_hba.conf
   - sudo service postgresql restart 11
+  - sudo apt-get install -y cmake gcc
 install:
   - psql -p 5433 -c 'create database travis_ci_test;' -U postgres
   - pip install --force-reinstall 'setuptools<58.0.0'
