--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ python-slugify==3.0.2
 drf-yasg==1.17.1
 GitPython==3.0.8
 celery==4.4.7
+schema-salad==4.5.20191229160203
+cwltool==1.0.20190906054215
 ruamel.yaml<=0.16.5
 psycopg2-binary==2.8.6
 mock==4.0.2
