--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
 sudo: required
-dist: jammy
+os:
+  - linux
 services:
   - postgresql
 addons:
@@ -19,8 +20,6 @@ before_install:
   - sudo service postgresql restart 11
 install:
   - psql -p 5433 -c 'create database travis_ci_test;' -U postgres
-  - pip install --force-reinstall 'setuptools<58.0.0'
-  - pip install --upgrade wheel 
   - pip install toil==3.21.0
   - pip install -r requirements.txt
   - pip install -r requirements-toil.txt
