--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-rdflib-jsonld==0.6.2
 Django==2.2.24
 djangorestframework==3.11.2
 markdown==3.1.1
@@ -9,8 +8,6 @@ python-slugify==3.0.2
 drf-yasg==1.17.1
 GitPython==3.0.8
 celery==4.4.7
-schema-salad==4.5.20191229160203
-cwltool==1.0.20190906054215
 ruamel.yaml<=0.16.5
 psycopg2-binary==2.8.6
 mock==4.0.2
@@ -20,3 +17,4 @@ coverage==5.5
 flake8==3.9.0
 black==22.3.0
 elastic-apm==6.1.3
+django-extensions==3.1.1
