--- a/requirements-toil.txt
+++ b/requirements-toil.txt
@@ -2,5 +2,6 @@ mock==4.0.2
 pytest==4.3.1
 pytest-cov==2.6.1
 pytest-timeout==1.3.3
+schema-salad<8,>=7
 git+https://github.com/mskcc/toil.git@5.4.2#egg=toil[cwl]
 cwltest
