--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -3,7 +3,7 @@ on:
     branches: [ "feature/githubactions" ]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
     
@@ -13,5 +13,25 @@ jobs:
       uses: actions/setup-python@v4      #This action Installs a version of python
       with:
         python-version: "3.8"
-
-
+    - name: Before Install
+      run: |
+         sudo apt-get update
+         sudo apt-get --yes remove postgresql\*
+         sudo apt-get install -y postgresql-11 postgresql-client-11
+         sudo cp /etc/postgresql/{9.6,11}/main/pg_hba.conf
+         sudo service postgresql restart 11
+    - name: Install dependencies 
+      run: |
+        psql -p 5433 -c 'create database travis_ci_test;' -U postgres
+        pip install --force-reinstall 'setuptools<58.0.0'
+        pip install -r requirements.txt
+        pip install -r requirements-toil.txt
+        source travis_env.sh
+        python manage.py migrate
+    - name: Scripts
+      run: |
+        source travis_env.sh
+        coverage run --source='.' manage.py test
+        coverage report -m --fail-under=75
+        flake8
+        black --check .
