--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -32,8 +32,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    
+    - name: Run tests
+      run: python manage.py test --pattern="*test*"
     env:
       RIDGEBACK_DB_NAME: github_actions
       RIDGEBACK_DB_PASSWORD: postgres
       RIDGEBACK_DB_USERNAME: postgres
+    
