--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -30,7 +30,7 @@ jobs:
    #      sudo systemctl start postgresql.service 
     - name: Install dependencies 
       run: |
-        pip install wheel setuptools pip --upgrade
+        python -m pip install wheel setuptools pip --upgrade
         pip install -r requirements.txt
         pip install -r requirements-toil.txt
     - name: Run tests
