--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -24,15 +24,14 @@ jobs:
     - name: Set up Python 
       uses: actions/setup-python@v4      #This action Installs a version of python
       with:
-        python-version: "3.9"
+        python-version: "3.8"
   #  - name: Before Install
    #   run: |
    #      sudo systemctl start postgresql.service 
     - name: Install dependencies 
       run: |
-        python -m pip install wheel setuptools pip --upgrade
-        pip install -r requirements.txt
-        pip install -r requirements-toil.txt
+       python -m pip install --upgrade pip
+       pip install -r requirements.txt
     - name: Run tests
       run: python manage.py test 
     env:
