--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,7 +31,9 @@ jobs:
     - name: Install dependencies 
       run: |
        python -m pip install --upgrade pip
+       pip install toil
        pip install -r requirements.txt
+       
     - name: Run tests
       run: python manage.py test 
     env:
