--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -30,11 +30,10 @@ jobs:
    #      sudo systemctl start postgresql.service 
     - name: Install dependencies 
       run: |
-       python -m pip install --upgrade pip
+       #python -m pip install --upgrade pip
        pip install "setuptools<58.0.0"
        pip install toil
        pip install -r requirements.txt
-       pip install -r requirements-toil.txt
        
     - name: Run tests
       run: coverage run --source='.' manage.py test
