--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -36,7 +36,7 @@ jobs:
        pip install -r requirements.txt
        
     - name: Run tests
-      run: coverage run --source='.' manage.py test
+      run: python manage.py test
     env:
       RIDGEBACK_DB_NAME: github_actions
       RIDGEBACK_DB_PASSWORD: postgres
