--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -33,6 +33,7 @@ jobs:
        #python -m pip install --upgrade pip
        pip install "setuptools<58.0.0"
        pip install toil
+       pip3 install cwl-utils
        pip install -r requirements.txt
        
     - name: Run tests
