--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -38,7 +38,7 @@ jobs:
        pip install -r requirements.txt
        
     - name: Run tests
-      run: python manage.py test
+      run: python manage.py test --pattern="*test*"
     env:
       RIDGEBACK_DB_NAME: github_actions
       RIDGEBACK_DB_PASSWORD: postgres
