--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -34,7 +34,8 @@ jobs:
        pip install "setuptools<58.0.0"
        pip install toil
        pip3 install cwl-utils
-       pip install cwltool==3.1.20221201130942
+       sudo apt-get update
+       sudo apt-get install cwltool
        pip install -r requirements.txt
        
     - name: Run tests
