--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -35,7 +35,7 @@ jobs:
        pip install toil
        pip3 install cwl-utils
        sudo apt-get update
-       sudo apt-get install cwltool
+       pip install cwltool
        pip install -r requirements.txt
        
     - name: Run tests
