--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -34,6 +34,7 @@ jobs:
        pip install "setuptools<58.0.0"
        pip install toil
        pip3 install cwl-utils
+       pip install toil-cwl-runner
        sudo apt-get update
        pip install cwltool
        pip install -r requirements.txt
