--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -40,8 +40,8 @@ jobs:
        pip install -r requirements.txt
        
     - name: Run tests
-      #run: python manage.py test --pattern="*test*"
-      uses: py-actions/flake8@v2
+      run: python manage.py test
+      #uses: py-actions/flake8@v2
     env:
       RIDGEBACK_DB_NAME: github_actions
       RIDGEBACK_DB_PASSWORD: postgres
