--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,14 +31,19 @@ jobs:
     - name: Install dependencies 
       run: |
        python -m pip install --upgrade pip
-       pip install "setuptools<58.0.0"
-       pip install toil
-       pip3 install cwl-utils
-       pip install toil-cwl-runner
-       pip install cwltool
-       pip install cwltest
+       #pip install "setuptools<58.0.0"
+       #pip install toil
+       pip install --force-reinstall 'setuptools<58.0.0'
+       #pip3 install cwl-utils
+       #pip install toil-cwl-runner
+       #pip install cwltool
+       #pip install cwltest
        pip install -r requirements.txt
-       
+       pip install -r requirements-toil.txt
+
+    
+    - name: Run migrations
+      run: python manage.py migrate
     - name: Run tests
       run: python manage.py test
       #uses: py-actions/flake8@v2
