--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -32,12 +32,12 @@ jobs:
       run: |
        python -m pip install --upgrade pip
        #pip install "setuptools<58.0.0"
-       #pip install toil
+       pip install toil
        pip install --force-reinstall 'setuptools<58.0.0'
-       #pip3 install cwl-utils
-       #pip install toil-cwl-runner
-       #pip install cwltool
-       #pip install cwltest
+       pip3 install cwl-utils
+       pip install toil-cwl-runner
+       pip install cwltool
+       pip install cwltest
        pip install -r requirements.txt
        pip install -r requirements-toil.txt
 
