--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,6 +18,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install toil
+        pip install cwl-utils
+
 
     - name: Run migrations
       run: python manage.py migrate
