--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,9 +17,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install toil
+        #pip install toil
         pip install cwl-utils
-        pip install cwltool
+        #pip install cwltool
+        pip install --upgrade toil[all]
 
 
 
