--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -15,14 +15,17 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        #python -m pip install --upgrade pip
+        #pip install -r requirements.txt
         #pip install toil
-        pip install cwl-utils
+        #pip install cwl-utils
         #pip install cwltool
-        pip install --upgrade toil[all]
-
-
+        #pip install --upgrade toil[all]
+        #pip install toil-cwl-runner
+        pip install --force-reinstall 'setuptools<58.0.0'
+        pip install -r requirements.txt
+        pip install -r requirements-toil.txt
+        python manage.py migrate
 
     - name: Run migrations
       run: python manage.py migrate
