--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,6 +22,7 @@ jobs:
         #pip install cwltool
         #pip install --upgrade toil[all]
         #pip install toil-cwl-runner
+        pip install --upgrade pip
         pip install --force-reinstall 'setuptools<58.0.0'
         pip install -r requirements.txt
         pip install -r requirements-toil.txt
