--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -36,7 +36,7 @@ jobs:
         #pip install --upgrade toil[all]
         #pip install toil-cwl-runner
         #pip install --upgrade pip 
-        pip install pip==19.3.1
+        #pip install pip==19.3.1
         pip install --force-reinstall 'setuptools<58.0.0'
         pip install -r requirements.txt
         pip install -r requirements-toil.txt
