--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.9
     - name: Install dependencies
       run: |
         #python -m pip install --upgrade pip
@@ -35,7 +35,7 @@ jobs:
         #pip install cwltool
         #pip install --upgrade toil[all]
         #pip install toil-cwl-runner
-        #pip install --upgrade pip 
+        pip install --upgrade pip 
         #pip install pip==19.3.1
         pip install --force-reinstall 'setuptools<58.0.0'
         pip install -r requirements.txt
