--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -35,8 +35,8 @@ jobs:
         #pip install cwltool
         #pip install --upgrade toil[all]
         #pip install toil-cwl-runner
-        pip install --upgrade pip 
-        #pip install pip==19.3.1
+        #pip install --upgrade pip 
+        pip install pip==19.3.1
         pip install --force-reinstall 'setuptools<58.0.0'
         pip install -r requirements.txt
         pip install -r requirements-toil.txt
