--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,29 +23,22 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: 3.9
     - name: Install dependencies
-      run: |
-        #python -m pip install --upgrade pip
-        #pip install -r requirements.txt
-        #pip install toil
-        #pip install cwl-utils
-        #pip install cwltool
-        #pip install --upgrade toil[all]
-        #pip install toil-cwl-runner
-        #pip install --upgrade pip 
+      run: | 
         pip install pip==19.3.1
         pip install --force-reinstall 'setuptools<58.0.0'
         pip install -r requirements.txt
         pip install -r requirements-toil.txt
-        python manage.py migrate
-
+        #python manage.py migrate
     - name: Run migrations
       run: python manage.py migrate
-    - name: Run tests
+    - name: Run test
       run: python manage.py test
+    - name: flake8 Lint
+      uses: py-actions/flake8@v2
     env:
       RIDGEBACK_DB_NAME: github_actions
       RIDGEBACK_DB_PASSWORD: postgres
