--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -36,15 +36,14 @@ jobs:
     - name: Run migrations
       run: python manage.py migrate
     - name: Run test
-      run: python manage.py test
+      #run: python manage.py test
+      run: |
+        coverage run --source='.' manage.py test
+        coverage report -m --fail-under=75
     - name: Run flake8
       uses: suo/flake8-github-action@releases/v1
       with:
           checkName: 'build'   # NOTE: this needs to be the same as the job name
-    - name: Django Coverage action
-      uses: actions/python-django-coverage-gitHub-action@0.9
-      with:
-          minimum-coverage: '75'
     env:
       RIDGEBACK_DB_NAME: github_actions
       RIDGEBACK_DB_PASSWORD: postgres
