--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
 exclude = .git,*migrations*
 max-line-length = 120
-ignore = E203
+ignore = E203,W503
 per-file-ignores = __init__.py:F401
